changed background image to .jpg vs .png to hopefully fix issue of background not showing on mobile browsers

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /*--------GENERAL--------*/
 body {
 background-color: #fff;
-background-image: url('/images/cream-pixels.png');
+background-image: url('/images/cream-pixels.jpg');
 background-repeat: repeat;
 }
 
